--- a/SocialLunch/app/src/main/res/values/strings.xml
+++ b/SocialLunch/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_create_profile">What foods do you like?</string>
     <string name="title_activity_home_page">HomePageActivity</string>
+    <string name="title_activity_chat">Chat</string>
 
 </resources>
