--- a/SocialLunch/app/src/main/res/values/strings.xml
+++ b/SocialLunch/app/src/main/res/values/strings.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SocialLunch</string>
+    <string name="app_name">Social Lunch</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_create_profile">What foods do you like?</string>
     <string name="title_activity_home_page">HomePageActivity</string>
     <string name="title_activity_chat">Chat</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    <string name="search_fragment_title">Find lunch buddies</string>
+    <string name="sessions_fragment_title">My lunches</string>
+    <string name="profile_fragment_title">Profile</string>
 
 </resources>
