--- a/SocialLunch/app/src/main/res/values/strings.xml
+++ b/SocialLunch/app/src/main/res/values/strings.xml
@@ -12,10 +12,7 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="search_fragment_title">Find lunch buddies</string>
-    <string name="sessions_fragment_title">My lunches</string>
+    <string name="upcoming_session_fragment_title">Upcoming lunch</string>
     <string name="profile_fragment_title">Profile</string>
-
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
