--- a/SocialLunch/app/src/main/res/values/strings.xml
+++ b/SocialLunch/app/src/main/res/values/strings.xml
@@ -6,12 +6,13 @@
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="action_filter">Filter</string>
+    <string name="action_suggest">Suggest</string>
     <string name="title_activity_create_profile">What foods do you like?</string>
     <string name="title_activity_home_page">HomePageActivity</string>
     <string name="title_activity_chat">Chat</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
-    <string name="search_fragment_title">Find lunch buddies</string>
+    <string name="search_fragment_title">Find buddies</string>
     <string name="upcoming_session_fragment_title">Upcoming lunch</string>
     <string name="profile_fragment_title">Profile</string>
     <string name="fb_app_id">1423528877943479</string>
