--- a/SocialLunch/app/src/main/res/values/strings.xml
+++ b/SocialLunch/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="search_fragment_title">Find buddies</string>
     <string name="upcoming_session_fragment_title">Upcoming lunch</string>
     <string name="profile_fragment_title">Profile</string>
+    <string name="label_list">List</string>
+    <string name="label_map">Map</string>
     <string name="fb_app_id">1423528877943479</string>
 
 </resources>
