[Discovery] Implemented time picker for meeting time in dialog for creating suggestion.

--- a/SocialLunch/app/src/main/res/values/strings.xml
+++ b/SocialLunch/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="create_suggestion_title">Create suggestion</string>
     <string name="create_suggestion_label_venue_default">Pick a venue</string>
     <string name="create_suggestion_label_meeting_time_default">Pick a meeting time</string>
+    <string name="create_suggestion_label_meeting_time">Meet at %s</string>
     <string name="label_cancel">Cancel</string>
     <string name="label_suggest">Suggest</string>
 
