[Discovery] Added activity for venue selection.

--- a/SocialLunch/app/src/main/res/values/strings.xml
+++ b/SocialLunch/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="create_suggestion_label_meeting_time">Meet at %s</string>
     <string name="label_cancel">Cancel</string>
     <string name="label_suggest">Suggest</string>
+    <string name="title_activity_venue_selection">Pick a venue</string>
 
 </resources>
