[Discovery] Display "Loading.." message in empty list view of venue selection when app is loading venues from Yelp API.

--- a/SocialLunch/app/src/main/res/values/strings.xml
+++ b/SocialLunch/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="label_previous">Previous</string>
     <string name="label_next">Next</string>
     <string name="label_empty">No result is found.</string>
+    <string name="label_loading">Loading&#8230;</string>
 
 </resources>
