--- a/SocialLunch/app/src/main/res/values/strings.xml
+++ b/SocialLunch/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">Gobble</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="action_filter">Filter</string>
@@ -15,7 +14,7 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="search_fragment_title">Find buddies</string>
-    <string name="upcoming_session_fragment_title">Upcoming lunch</string>
+    <string name="upcoming_session_fragment_title">My buddies</string>
     <string name="profile_fragment_title">Profile</string>
     <string name="label_list">List</string>
     <string name="label_map">Map</string>
