--- a/SocialLunch/app/src/main/res/values/strings.xml
+++ b/SocialLunch/app/src/main/res/values/strings.xml
@@ -38,5 +38,7 @@
     <string name="label_next">Next</string>
     <string name="label_empty">No result is found.</string>
     <string name="label_loading">Loading&#8230;</string>
+    <string name="title_activity_suggested_venue">Suggestion</string>
+    <string name="label_choose_meeting_times">Please choose a meeting time</string>
 
 </resources>
