[Onboarding] Show "How it works" activity if not shown before.

--- a/SocialLunch/app/src/main/res/values/strings.xml
+++ b/SocialLunch/app/src/main/res/values/strings.xml
@@ -44,5 +44,6 @@
     <string name="clock">{fa-clock-o}</string>
     <string name="im_going">I\'m Going |</string>
     <string name="fake_user">Jonny Appleseed</string>
+    <string name="title_activity_how_it_works">How it works</string>
 
 </resources>
